fix: adjust contrast for active header item

--- a/web/css/header.css
+++ b/web/css/header.css
@@ -11,7 +11,7 @@ header {
 }
 
 header a {
-  padding: 0 1rem;
+  padding: 0 1.2rem;
   text-decoration: none;
 }
 
@@ -25,10 +25,12 @@ nav {
   display: flex;
   flex-direction: row;
   text-transform: uppercase;
+  padding-left: 2rem;
 }
 
 nav > .active {
-  color: var(--active-font-color);
+  padding-bottom: 10px;
+  box-shadow: inset 0 -2px 0 0 var(--active-font-color);
 }
 
 .profile-widget {
